# Transfo_Model

./: .gitignore  BUILD_AU_MAC.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SKILL.md
.github/workflows/: ci.yml
Source/Core/: HysteresisProcessor.cpp  HysteresisProcessor.h  HysteresisUtils.h
Source/DSP/: DCBlocker.h  Oversampling.cpp  Oversampling.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Solver/: ImplicitSolver.h
Tests/: CMakeLists.txt  plot_mh.py  test_bertotti_coupling.cpp  test_bertotti_excess_loss_scaling.cpp  test_bertotti_field_separation.cpp  test_bertotti_zero_regression.cpp  test_bjt_leaf.cpp  test_channel_strip.cpp  test_circuit_model.cpp  test_classab_isolated.cpp  test_common.h  test_cpwl_adaa.cpp  test_cpwl_passivity.cpp  test_diode_leaf.cpp  test_double_legacy_plugin_path.cpp  test_dynamic_losses.cpp  test_dynamic_parallel_adaptor.cpp  test_flux_integrator.cpp  test_fluxint_artistic.cpp  test_fluxint_diag.cpp  test_fluxint_physical.cpp  test_freq_response_validation.cpp  test_harrison_integration.cpp  test_harrison_micpre.cpp  test_heritage_thd_lowlevel.cpp  test_hsim_diagnostics.cpp  test_hysteresis.cpp  test_hysteresis_stability.cpp  test_input_stage.cpp  test_ja_derivation_canonical.cpp  test_ja_loop_sanity.cpp  test_je990_path.cpp  test_jensen_bertotti_freq.cpp  test_jensen_convergence.cpp  test_jensen_cpwl_parity.cpp  test_jensen_harmonics.cpp  test_jensen_passivity.cpp  test_lc_resonance.cpp  test_neve_gain_diag.cpp  test_neve_newton_trace.cpp  (+18 more)
Tests/data/validation/: fr_API_AP2503_realtime.csv  fr_Jensen_JT-115K-E_realtime.csv  fr_Jensen_JT-11ELCF_realtime.csv  fr_Neve_10468_Input_realtime.csv  fr_Neve_LI1166_Output_realtime.csv  thd_API_AP2503_realtime.csv  thd_Jensen_JT-115K-E_realtime.csv  thd_Jensen_JT-11ELCF_realtime.csv  thd_Neve_10468_Input_realtime.csv  thd_Neve_LI1166_Output_realtime.csv
build_diag3/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
build_diag3/Testing/Temporary/: CTestCostData.txt
build_diag3/test_bjt_leaf.dir/Release/: test_bjt_leaf.exe.recipe
build_diag3/test_circuit_model.dir/Release/: test_circuit_model.exe.recipe
build_diag3/test_cpwl_adaa.dir/Release/: test_cpwl_adaa.exe.recipe
build_diag3/test_cpwl_passivity.dir/Release/: test_cpwl_passivity.exe.recipe
build_diag3/test_diode_leaf.dir/Release/: test_diode_leaf.exe.recipe
build_diag3/test_dynamic_losses.dir/Release/: test_dynamic_losses.exe.recipe
build_diag3/test_dynamic_parallel_adaptor.dir/Release/: test_dynamic_parallel_adaptor.exe.recipe
build_diag3/test_hsim_diagnostics.dir/Release/: test_hsim_diagnostics.exe.recipe
build_diag3/test_hysteresis.dir/Release/: test_hysteresis.exe.recipe
build_diag3/test_input_stage.dir/Release/: test_input_stage.exe.recipe
build_diag3/test_je990_path.dir/Release/: test_je990_path.exe.recipe
build_diag3/test_lc_resonance.dir/Release/: test_lc_resonance.exe.recipe
build_diag3/test_neve_gain_diag.dir/Release/: test_neve_gain_diag.exe.recipe
build_diag3/test_neve_path.dir/Release/: test_neve_path.exe.recipe
build_diag3/test_nonlinear_lm.dir/Release/: test_nonlinear_lm.exe.recipe
build_diag3/test_output_stage.dir/Release/: test_output_stage.exe.recipe
build_diag3/test_plugin_integration.dir/Release/: test_plugin_integration.exe.recipe
build_diag3/test_preamp_audio_sweep.dir/Release/: test_preamp_audio_sweep.exe.recipe
build_diag3/test_preamp_diagnostic.dir/Release/: test_preamp_diagnostic.exe.recipe
build_diag3/test_preamp_full.dir/Release/: test_preamp_full.exe.recipe
build_diag3/test_preamp_plugin.dir/Release/: test_preamp_plugin.exe.recipe
build_tests/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
build_tests/Testing/Temporary/: CTestCostData.txt
build_tests/test_bjt_leaf.dir/Release/: test_bjt_leaf.exe.recipe
build_tests/test_circuit_model.dir/Release/: test_circuit_model.exe.recipe
build_tests/test_cpwl_adaa.dir/Release/: test_cpwl_adaa.exe.recipe
build_tests/test_cpwl_passivity.dir/Release/: test_cpwl_passivity.exe.recipe
build_tests/test_diode_leaf.dir/Release/: test_diode_leaf.exe.recipe
build_tests/test_neve_path.dir/Release/: test_neve_path.exe.recipe
data/materials/: mu_metal_80ni.json  nife_50.json  permalloy_1j85_sun2023.json
data/measurements/: fr_JT115KE_2026-04-26.csv  fr_JT11ELCF_2026-04-26.csv  thd_JT115KE_2026-04-26.csv  thd_JT11ELCF_2026-04-26.csv
data/transformers/: jensen_jt115ke.json  marinair_t1444_input.json  marinair_t1447_bridging.json  marinair_t1449_bridging.json  neve_10368_bridging.json  neve_10468_input.json  neve_31267_bridging.json  neve_li1166_output.json  neve_lo1173_output.json  neve_lo2567_hot.json
docs/: ACADEMIC_RESEARCH_2026-03-27.md  ADR_001_HYBRID_ARCHITECTURE.md  CONTEXT_DIAGRAM.md  DAW_COMPATIBILITY.md  JA_DERIVATION.md  KNOWN_LIMITATIONS.md  LESSONS_WDF_PREAMP.md  MODEL_LIMITATIONS.md  POSTMORTEM_WDF_GAIN_FIX.md  PROMPT_GPT54_PHASE3_REMAINING.md  REQUIREMENTS.md  RESEARCH_LM_DYNAMIC.md  RESEARCH_MASTERING_DEPTH.md  SPRINT_1_REPORT.md  SPRINT_PLAN_PREAMP.md  SPRINT_THEORY_NOTES.md  USER_STORIES.md  VALIDATION_REPORT.md
docs/archive/: ACQUISITION_PITCH.md  ANALYSIS_JE990_KVL_KCL_2026-03-26.md  CHAN_MODEL_REFERENCE.md  GPT_NR_DIVERGENCE_PROMPT.md  PROMPT_PERPLEXITY_DEEP_RESEARCH.md  PROMPT_PERPLEXITY_HARMONIC_ARCHITECTURE.md  RAPPORT_PHASE1_PHASE2_2026-03-26.md  SESSION_RECAP_AND_MISSION.md  SPRINT_PLAN_Lm_LC.md
legacy/: build_test.bat
plugin/Source/: BHScopeComponent.cpp  BHScopeComponent.h  LevelMeterComponent.h  ParameterLayout.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VUMeterComponent.h
spice/: README.md  neve_10468_input.asc  neve_10468_input.cir  neve_1073_full_channel.cir  neve_1073_input.asc  neve_li1166_output.cir  neve_lo1173_output.cir  neve_lo2567_hot.cir  transformer_ref.asc
tools/: ab_compare.py  diag_chi_diff.cpp  diag_thd_decompose.cpp  generate_demo_audio.cpp  plot_thd.py  plot_validation.py  simulate.cpp  validate_jensen.cpp
twisterion-site/: package-lock.json  package.json
(+355 files in other folders)
